--- a/astyle.css
+++ b/astyle.css
@@ -47,17 +47,31 @@ body {
 
     }
 
-    div.images {
+div.images {
         position: relative;
         margin-top: -400px;
         left: -700px
     }
-    .image1 {
+.image1 {
         position: absolute;
         margin-top: -100px;
         left: 5px;
     }
 
-    .menuknop:hover {
+.menuknop:hover {
         color: orange;
+    }
+
+
+.changelog {
+    color: white;
+    font-family:'Franklin Gothic Medium';
+    width: 200px;
+    height: 400px;
+    background: black;
+    position: absolute;
+    font-size: 15px;
+    margin-left: -10px;
+    margin-top: 190px;
+
     }
