--- a/astyle.css
+++ b/astyle.css
@@ -57,6 +57,11 @@ div.images {
         margin-top: -100px;
         left: 5px;
     }
+    .image2 {
+        bottom: 0px;
+        left: 20px;
+    }
+
 
 .menuknop:hover {
         color: yellow;
@@ -77,7 +82,7 @@ div.images {
     }
 
     .footer {
-        position: fixed;
+        position: absolute;
         left: 0px;
         bottom: 0px;
         width: 100%;
@@ -88,10 +93,40 @@ div.images {
         font-size: 15px;
 
     }
+
+    .footer2 {
+        right: 0px;
+        bottom: 0px;
+        position: absolute;
+        background-color: yellow;
+        font-family: 'Franklin Gothic Medium';
+        font-size: 15px;
+    }
+
+    .footer3 {
+        left: 20px;
+        bottom: 0px;
+        position: absolute;
+        background-color: yellow;
+        font-family: 'Franklin Gothic Medium';
+        font-size: 15px;
+    }
+    
+    
     .text {
-        margin-top: -40px;
-        margin-left: 1400px;
+        margin-top: 0px;
+        margin-left: 0px;
         color: black;
         font-family: 'Franklin Gothic Medium';
+
+    }
+
+    .btn {
+        background-color: none;
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        padding: 28px 20px;
+        cursor: pointer;
 
     }
