--- a/astyle.css
+++ b/astyle.css
@@ -7,8 +7,7 @@ body {
     background-size: cover;
     text-align: center;
     width: 100%;
-    height: 100%;
-}
+    height: 100%;}
 
 /*Hoofdmenu*/
     #menu {
@@ -21,7 +20,7 @@ body {
 
 .menuknop {
     color: white;
-    font-size: 1.6vw;
+    font-size: 25px;
     font-family: 'Franklin Gothic Medium';
     text-align: center;
     display: inline-block;
@@ -37,7 +36,7 @@ body {
     color: red;
     text-decoration: none;
     font-family: 'Franklin Gothic Medium';
-    font-size: 1.6vw;
+    font-size: 25px;
     display: inline-block;
     margin-left: 50px;
     margin-right: 50px;
@@ -52,7 +51,7 @@ body {
     height: 100px;
     background:none;
     position: absolute;
-    font-size: 4vw;
+    font-size: 50px;
 
     }
 
@@ -66,19 +65,16 @@ div.images {
         position: absolute;
         margin-top: -100px;
         left: 5px;
-        max-width: 100%; height: auto;
     }
     .image2 {
         bottom: 0px;
         left: 20px;
-        max-width: 100%; height: auto;
     }
 
     .image3 {
         position: absolute;
         margin-top: -100px;
-        right: -120px;
-        max-width: 100%; height: auto;
+        right: 0px;
     }
 
 /*Hover*/
@@ -94,9 +90,10 @@ div.images {
     height: 200px;
     background: black;
     position: absolute;
+    font-size: 15px;
     margin-left: -10px;
     margin-top: 400px;
-    font-size: 1vw;
+
     }
 
     /*footers*/
@@ -109,7 +106,7 @@ div.images {
         color: black;
         text-align: center;
         font-family: 'Franklin Gothic Medium';
-        font-size: 1vw;
+        font-size: 15px;
 
     }
 
@@ -119,7 +116,7 @@ div.images {
         position: absolute;
         background-color: yellow;
         font-family: 'Franklin Gothic Medium';
-        font-size: 1vw;
+        font-size: 15px;
     }
 
  .footer3 {
@@ -128,7 +125,7 @@ div.images {
         position: absolute;
         background-color: yellow;
         font-family: 'Franklin Gothic Medium';
-        font-size: 1vw;
+        font-size: 15px;
     }
     
     
@@ -138,7 +135,7 @@ div.images {
         margin-left: 0px;
         color: black;
         font-family: 'Franklin Gothic Medium';
-        font-size: 1vw;
+
     }
 
     /*knoppen*/
@@ -149,7 +146,7 @@ div.images {
         bottom: 0px;
         padding: 28px 20px;
         cursor: pointer;
-        font-size: 1vw;
+
     }
 
     /*header*/
@@ -159,9 +156,10 @@ div.images {
         background-color: none;
         color: yellow;
         font-family: 'Franklin Gothic Medium';
+        font-size: 10px;
         position: absolute;
         top: 0px;
-        font-size: 1vw;
+
 
     }
 
@@ -172,7 +170,6 @@ div.images {
         text-align: center;
         color: yellow;
         font-family: 'Franklin Gothic Medium';
-        font-size: 2vw;
     }
 
     /*text=portofolio*/
@@ -183,17 +180,17 @@ div.images {
     color: yellow;
     width: 100%;
     font-family: 'Franklin Gothic Medium';
-    font-size: 1vw;
+    font-size: 20px;
     top: 200px;
 }
 
 /*Knop2*/
 .btn2 {
     background-color: none;
-    position: relative;
-    right: -200px;
-    top: -34px;
-    padding: 28px 100px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    padding: 28px 52px;
     cursor: pointer;
 }
 
@@ -204,7 +201,7 @@ div.images {
     top: 300px;
     left: 700px;
     color: yellow;
-    font-size: 2vw;
+    font-size: 30px;
     font-family: 'Franklin Gothic Medium';
-
 }
+
