--- a/astyle.css
+++ b/astyle.css
@@ -11,7 +11,9 @@ body {
 
 /*Hoofdmenu*/
     #menu {
-    margin: auto;
+    position: relative;
+    font-size: 2vw;
+    left: 300px;
     margin-top: 50px;
     width: 60%;
     border: 3px solid yellow;
@@ -20,7 +22,7 @@ body {
 
 .menuknop {
     color: white;
-    font-size: 25px;
+    font-size: 1.6vw;
     font-family: 'Franklin Gothic Medium';
     text-align: center;
     display: inline-block;
@@ -47,24 +49,18 @@ body {
 .title {
     color: yellow;  
     font-family: 'Franklin Gothic Medium';            
-    width: 100%;
-    height: 100px;
+    width: 98%;
     background:none;
-    position: absolute;
-    font-size: 50px;
+    position: relative;
+    font-size:2vw;
 
     }
 
     /*afbeeldingen*/
-div.images {
-        position: relative;
-        margin-top: -400px;
-        left: -700px
-    }
 .image1 {
         position: absolute;
-        margin-top: -100px;
-        left: 5px;
+        margin-top: -340px;
+        left: 15px;
     }
     .image2 {
         bottom: 0px;
@@ -73,8 +69,9 @@ div.images {
 
     .image3 {
         position: absolute;
-        margin-top: -100px;
-        right: 0px;
+        margin-top: -340px;
+        right: 25px;
+        max-width: 100%; height: auto;
     }
 
 /*Hover*/
@@ -87,12 +84,12 @@ div.images {
     color: white;
     font-family:'Franklin Gothic Medium';
     width: 200px;
-    height: 200px;
+    height: 250px;
     background: black;
     position: absolute;
     font-size: 15px;
     margin-left: -10px;
-    margin-top: 400px;
+    margin-top: 150px;
 
     }
 
