--- a/astyle.css
+++ b/astyle.css
@@ -1,4 +1,15 @@
-
+@media screen and (min-width: 900px) {
+    article {
+        padding: 1rem 3rem;
+    }
+}
+@supports (display: flex;) {
+    @media screen and (min-width: 900px) {
+        article {
+            display: flex;
+        }
+    }
+}
 /*Achtergrond*/
 body {
     background-image: url("achtergrond.jpg");
