--- a/astyle.css
+++ b/astyle.css
@@ -3,7 +3,7 @@
         padding: 1rem 3rem;
     }
 }
-@supports (display: flex;) {
+@supports (display: flex) {
     @media screen and (min-width: 900px) {
         article {
             display: flex;
