--- a/astyle.css
+++ b/astyle.css
@@ -213,3 +213,11 @@ body {
     font-family: 'Franklin Gothic Medium';
 }
 
+.verificatie {
+    width: 40px;
+    height: 20px;
+    bottom: 0px;
+    left: 0px;
+    color: black;
+}
+
