--- a/style.css
+++ b/style.css
@@ -101,8 +101,153 @@ header nav ul li a {
     float: left;
 }
 
+/*Tablet versie*/
+@media only screen and (min-width: 768px) {
+
+
+    .afbeelding-logo {
+        position: relative;
+        width: 100px;
+        height: 50px;
+        margin-top: 0px;
+        margin-left: 165px;
+        background-position: center;
+    
+    }
+
+    .vista-logo {
+        right: 50px;
+        top: 30px;
+        position: absolute;
+        display: block;
+    }
+
+    .btn2 {
+        background-color: none;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        padding: 28px 50px;
+        cursor: pointer;
+    }
+
+    .afbeelding-logo {
+        width: 100px;
+        height: 50px;
+        margin-top: 0px;
+        margin-left: 165px;
+        background-position: center;
+    
+    }
+    
+    .btn {
+        background-color: none;
+        position: absolute;
+        margin-left: 0px;
+        margin-top: 0px;
+        padding: 28px 45px;
+        cursor: pointer;
+    }
+
+    header {
+        background-color: white;
+        width: 100%;
+        height: 100px;
+    }
+    
+    header .header-logo {
+        font-family: Catamaran;
+        font-size: 24px;
+        font-weight: 900;
+        color: #111;
+        text-transform: uppercase;
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px 0px
+    
+    }
+    
+    header nav ul {
+        display: block;
+        margin: 0 auto;
+        width: fit-content;
+    }
+    
+    header nav ul li {
+        display: inline-block;
+        list-style: none;
+        padding: 0px 16px;
+    }
+    
+    header nav ul li a {
+        font-family: catamaran;
+        font-size: 16px;
+        color: #111;
+        text-transform: uppercase;
+    }
+
+    /*INDEX*/
+
+.index-banner {
+    width: 100%;
+    height: calc(100vh - 100px);
+    background-image: url(banner.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: table;
+}
+
+.vertical-center {
+    display: table-cell;
+    vertical-align: middle;
+
+}
+
+.index-banner h2 {
+    font-family: catamaran;
+    font-size: 60px;
+    font-weight: 900;
+    line-height: 70px;
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px 8px #111;
+}
+
+.index-banner h1 {
+    font-family: Cormorant Garamond;
+    font-size: 28px;
+    font-weight: 100;
+    font-style: italic;
+    line-height: 40px;
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px 8px #111;
+}
+
+.index-links div {
+    margin: 16px 16px 0px;
+    width: calc(100% - 32px);
+    height: 100px;
+    background-color: #f2f2f2;
+}
+
+.index-links div h3 {
+    font-family: Catamaran;
+    font-size: 28px;
+    font-weight: 300;
+    line-height: 100px;
+    color: #111;
+    text-align: center;
+    text-transform: uppercase;
+    
+}
+}
+
 /*Desktop versie*/
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 800px) {
+
     .afbeelding-logo {
         margin: 31px 0px;
         width: 100px;
@@ -219,8 +364,6 @@ header nav ul li a {
     font-size: 26px;
 }
 
-
-@media only screen and (min-width: 1000px) {
     .index-banner {
         width: 100%;
         height: 500px;
@@ -230,13 +373,14 @@ header nav ul li a {
         background-size: cover;
         display: table;
     }
-}
 
 .afbeelding-logo {
     width: 100px;
     height: 50px;
     margin-top: 0px;
     margin-left: 165px;
+    background-position: center;
+
 }
 
 .btn {
