--- a/style.css
+++ b/style.css
@@ -391,9 +391,6 @@ header nav ul li a {
     padding: 28px 45px;
     cursor: pointer;
 }
-p {
-    color: #111;
-}
 
 /*Footer*/
 
@@ -401,14 +398,14 @@ footer {
     width: calc(100% - 80px);
     padding: 40px 40px;
     background-color: #111;
-    margin-top: 20px;
+    margin-top: 60px;
     overflow: hidden;
 }
 
 footer ul {
     width: fit-content;
     float: left;
-    padding-left: 20px;
+    padding-left: 0px;
 }
 
 footer ul li {
@@ -444,10 +441,10 @@ footer ul li a {
 }
 
 .contact {
-    top: 500px;
-    left: 400px;
+    text-align: center;
     position: relative;
     width: 100%;
     font-size: 20px;
-    color: white;
+    color: black;
 }
+
