--- a/style.css
+++ b/style.css
@@ -49,61 +49,65 @@ table {
     text-decoration: none;
 }
 
-header {
-    background-color: white;
-    width: 100%;
-    height: 100px;
+@media only screen and (min-width: 0px) {
+
+    header {
+        background-color: white;
+        width: 100%;
+        height: 100px;
+    }
+
+    header .header-logo {
+        font-family: Catamaran;
+        font-size: 24px;
+        font-weight: 900;
+        color: #111;
+        text-transform: uppercase;
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px 0px
+
+    }
+
+    header nav ul {
+        display: block;
+        margin: 0 auto;
+        width: fit-content;
+    }
+
+    header nav ul li {
+        display: inline-block;
+        list-style: none;
+        padding: 0px 16px;
+    }
+
+    header nav ul li a {
+        font-family: catamaran;
+        font-size: 16px;
+        color: #111;
+        text-transform: uppercase;
+    }
+
+    .vista-logo {
+        display: none;
+    }
+
+    .madeby {
+        width: 100%;
+        bottom: 0px;
+        text-align: center;
+        text-decoration: white;
+        color: #f2f2f2;
+        font-size: 6px;
+        float: left;
+    }
+      
 }
 
-header .header-logo {
-    font-family: Catamaran;
-    font-size: 24px;
-    font-weight: 900;
-    color: #111;
-    text-transform: uppercase;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px 0px
-
-}
-
-header nav ul {
-    display: block;
-    margin: 0 auto;
-    width: fit-content;
-}
-
-header nav ul li {
-    display: inline-block;
-    list-style: none;
-    padding: 0px 16px;
-}
-
-header nav ul li a {
-    font-family: catamaran;
-    font-size: 16px;
-    color: #111;
-    text-transform: uppercase;
-}
-
-.vista-logo {
-    display: none;
-}
-
-.madeby {
-    width: 100%;
-    bottom: 0px;
-    text-align: center;
-    text-decoration: white;
-    color: #f2f2f2;
-    font-size: 6px;
-    float: left;
-}
 
 /*Tablet versie*/
 @media only screen and (min-width: 768px) {
-
 
     .afbeelding-logo {
         position: relative;
@@ -189,60 +193,61 @@ header nav ul li a {
 
     /*INDEX*/
 
-.index-banner {
-    width: 100%;
-    height: calc(100vh - 100px);
-    background-image: url(banner.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: table;
-}
+        .index-banner {
+            width: 100%;
+            height: calc(100vh - 100px);
+            background-image: url(banner.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            display: table;
+        }
 
-.vertical-center {
-    display: table-cell;
-    vertical-align: middle;
+        .vertical-center {
+            display: table-cell;
+            vertical-align: middle;
 
-}
+        }
 
-.index-banner h2 {
-    font-family: catamaran;
-    font-size: 60px;
-    font-weight: 900;
-    line-height: 70px;
-    color: white;
-    text-align: center;
-    text-shadow: 2px 2px 8px #111;
-}
+        .index-banner h2 {
+            font-family: catamaran;
+            font-size: 60px;
+            font-weight: 900;
+            line-height: 70px;
+            color: white;
+            text-align: center;
+            text-shadow: 2px 2px 8px #111;
+        }
 
-.index-banner h1 {
-    font-family: Cormorant Garamond;
-    font-size: 28px;
-    font-weight: 100;
-    font-style: italic;
-    line-height: 40px;
-    color: white;
-    text-align: center;
-    text-shadow: 2px 2px 8px #111;
-}
+        .index-banner h1 {
+            font-family: Cormorant Garamond;
+            font-size: 28px;
+            font-weight: 100;
+            font-style: italic;
+            line-height: 40px;
+            color: white;
+            text-align: center;
+            text-shadow: 2px 2px 8px #111;
+        }
 
-.index-links div {
-    margin: 16px 16px 0px;
-    width: calc(100% - 32px);
-    height: 100px;
-    background-color: #f2f2f2;
-}
+        .index-links div {
+            margin: 16px 16px 0px;
+            width: calc(100% - 32px);
+            height: 100px;
+            background-color: #f2f2f2;
+        }
 
-.index-links div h3 {
-    font-family: Catamaran;
-    font-size: 28px;
-    font-weight: 300;
-    line-height: 100px;
-    color: #111;
-    text-align: center;
-    text-transform: uppercase;
-    
-}
+        .index-links div h3 {
+            font-family: Catamaran;
+            font-size: 28px;
+            font-weight: 300;
+            line-height: 100px;
+            color: #111;
+            text-align: center;
+            text-transform: uppercase;
+            
+        }
+
 }
 
 /*Desktop versie*/
@@ -359,10 +364,12 @@ header nav ul li a {
    
 }
 
-.menuknop:hover {
-    color: purple;
-    font-size: 26px;
-}
+    .menuknop:hover {
+      font-size: 24px;
+      color: purple;
+      display: inline-block;
+    }
+  
 
     .index-banner {
         width: 100%;
@@ -447,4 +454,3 @@ footer ul li a {
     font-size: 20px;
     color: black;
 }
-
