--- a/style.css
+++ b/style.css
@@ -102,6 +102,21 @@ table {
         font-size: 6px;
         float: left;
     }
+
+    .portfolio-bestand {
+        margin: 30px 30px 30px 30px;
+        width: calc(90% - 5px);
+        text-align: center;
+        font-family: catamaran;
+        line-height: 30px;
+        color: black;
+
+    }
+
+    a:hover {
+        color: #191970;
+        font-size: 17px;
+    }
     
       
 }
@@ -192,12 +207,25 @@ table {
         text-transform: uppercase;
     }
 
+    .portfolio-bestand {
+        margin: 30px 30px 30px 30px;
+        margin-left: 375px;
+        margin-right: 375px;
+        border: 3px solid purple;
+        width: 50%;
+        text-align: center;
+        line-height: 30px;
+        font-family: catamaran;
+        color: black;
+
+    }
+
     /*INDEX*/
 
         .index-banner {
             width: 100%;
             height: calc(100vh - 100px);
-            background-image: url(banner.jpg);
+            background-image: url(img/banner.jpg);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -254,6 +282,19 @@ table {
 /*Desktop versie*/
 @media only screen and (min-width: 800px) {
 
+    .portfolio-bestand {
+        margin: 30px 30px 30px 30px;
+        margin-left: 375px;
+        margin-right: 375px;
+        border: 3px solid purple;
+        width: 50%;
+        text-align: center;
+        line-height: 30px;
+        font-family: catamaran;
+        color: black;
+
+    }
+
     .afbeelding-logo {
         margin: 31px 0px;
         width: 100px;
@@ -304,7 +345,7 @@ table {
 .index-banner {
     width: 100%;
     height: calc(100vh - 100px);
-    background-image: url(banner.jpg);
+    background-image: url(img/banner.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -375,7 +416,7 @@ table {
     .index-banner {
         width: 100%;
         height: 500px;
-        background-image: url(banner.jpg);
+        background-image: url(img/banner.jpg);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
