--- a/style.css
+++ b/style.css
@@ -51,6 +51,14 @@ table {
 
 @media only screen and (min-width: 0px) {
 
+    .counter {
+        margin: 16px 80px 0px;
+        width: calc(100% - 136px);
+        color: white;
+        text-align: center;
+
+    }
+
     header {
         background-color: white;
         width: 100%;
@@ -124,6 +132,14 @@ table {
 
 /*Tablet versie*/
 @media only screen and (min-width: 768px) {
+
+    .counter {
+        margin: 16px 350px 0px;
+        width: calc(100% - 691px);
+        color: white;
+        text-align: center;
+
+    }
 
     .afbeelding-logo {
         position: relative;
@@ -281,6 +297,14 @@ table {
 
 /*Desktop versie*/
 @media only screen and (min-width: 800px) {
+
+    .counter {
+        margin: 16px 350px 0px;
+        width: calc(100% - 691px);
+        color: white;
+        text-align: center;
+
+    }
 
     .portfolio-bestand {
         margin: 30px 30px 30px 30px;
