--- a/style.css
+++ b/style.css
@@ -51,6 +51,20 @@ table {
 
 @media only screen and (min-width: 0px) {
 
+    .contacttekst {
+        position: relative;
+        margin: 30px 30px 30px 30px;
+        width: calc(100% - 50px);
+        text-align: center;
+        font-family: catamaran;
+        line-height: 30px;
+        color: black;
+        font-size: 20px;
+
+
+    }
+
+
     .counter {
         margin: 16px 80px 0px;
         width: calc(100% - 136px);
@@ -132,6 +146,19 @@ table {
 
 /*Tablet versie*/
 @media only screen and (min-width: 768px) {
+
+    .contacttekst {
+        position: relative;
+        margin: 30px 30px 30px 30px;
+        width: calc(100% - 50px);
+        text-align: center;
+        font-family: catamaran;
+        line-height: 30px;
+        color: black;
+        font-size: 20px;
+
+
+    }
 
     .counter {
         margin: 16px 350px 0px;
@@ -297,6 +324,19 @@ table {
 
 /*Desktop versie*/
 @media only screen and (min-width: 800px) {
+
+    .contacttekst {
+        position: relative;
+        margin: 30px 30px 30px 30px;
+        width: calc(100% - 50px);
+        text-align: center;
+        font-family: catamaran;
+        line-height: 30px;
+        color: black;
+        font-size: 20px;
+
+
+    }
 
     .counter {
         margin: 16px 350px 0px;
