--- a/style.css
+++ b/style.css
@@ -125,16 +125,6 @@ table {
         float: left;
     }
 
-    .portfolio-bestand {
-        margin: 30px 30px 30px 30px;
-        width: calc(90% - 5px);
-        text-align: center;
-        font-family: catamaran;
-        line-height: 30px;
-        color: black;
-
-    }
-
     a:hover {
         color: #191970;
         font-size: 17px;
@@ -250,18 +240,6 @@ table {
         text-transform: uppercase;
     }
 
-    .portfolio-bestand {
-        margin: 30px 30px 30px 30px;
-        margin-left: 375px;
-        margin-right: 375px;
-        border: 3px solid purple;
-        width: 50%;
-        text-align: center;
-        line-height: 30px;
-        font-family: catamaran;
-        color: black;
-
-    }
 
     /*INDEX*/
 
@@ -343,19 +321,6 @@ table {
         width: calc(100% - 691px);
         color: white;
         text-align: center;
-
-    }
-
-    .portfolio-bestand {
-        margin: 30px 30px 30px 30px;
-        margin-left: 375px;
-        margin-right: 375px;
-        border: 3px solid purple;
-        width: 50%;
-        text-align: center;
-        line-height: 30px;
-        font-family: catamaran;
-        color: black;
 
     }
 
@@ -443,7 +408,7 @@ table {
     text-shadow: 2px 2px 8px #111;
 }
 
-.index-links div {
+.index-links {
     margin: 16px 16px 0px;
     width: calc(100% - 32px);
     height: 100px;
@@ -503,6 +468,23 @@ table {
     margin-top: 0px;
     padding: 28px 45px;
     cursor: pointer;
+}
+
+/*portfolio vakken*/
+
+.portfolio-links .portfolio-link {
+    font-family: 'Franklin Gothic Medium';
+    font-size: 15px;
+    color: #111;
+    text-align: center;
+    float: left;
+    width: 240px;
+    height: 240px;
+    background-color: #e3e3e3;
+    margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 100px;
 }
 
 /*Footer*/
